--- a/empresa.html
+++ b/empresa.html
@@ -17,9 +17,7 @@
   <link href="css/styles.css" rel="stylesheet" />
 </head>
 <body>
-  <!-- *******************************************  Empieza el Contenido *********************************************-->
-  <!-- Inicio barra de Navegacion-->
-          <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+          <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">   <!-- Inicio barra de Navegacion-->
               <div class="container">
                   <a class="navbar-brand js-scroll-trigger" href="index.html"> Inicio </a><button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
                   <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -62,7 +60,7 @@ a través del ahorro de agua y el uso de productos amigables con el ambiente.</p
 <!-- Fila vacia -->
               </div>
             </div> <!-- Fin Fila Quienes Somos -->
-            <div class="row border-bottom"> <!-- Inicio Mision Vision  mivi bg-primary-->
+            <div class="row border-bottom"> <!-- Inicio Mision Vision-->
               <div class="col-md-1">
   <!--Fila vacia-->
               </div>
@@ -104,7 +102,7 @@ a través del ahorro de agua y el uso de productos amigables con el ambiente.</p
 <!-- Fila vacia -->
             </div>
           </div> <!-- Fin Fila Que hacemos -->
-          <div class="row "> <!-- Inocop Fila Ventajas-->
+          <div class="row "> <!-- Inicio Fila Ventajas-->
             <div class="col-md-1">
 <!--Fila vacia-->
             </div>
@@ -135,13 +133,13 @@ a través del ahorro de agua y el uso de productos amigables con el ambiente.</p
   <!-- Inicio Iconos Flotante -->
          <div class="btn-whatsapp">
          <a href="https://api.whatsapp.com/send?phone=+57 3204661340&text=Quiero mas información a cerca de sus servicios" target="_blank">
-         <img src="img/Wp.png" alt="">
+         <img src="Ismg/Wp.png" alt="">
          </a>
          </div>
 
          <div class="btn-wp">
          <a href="https://api.whatsapp.com/send?phone=+57 3204661340" target="_blank">
-         <img src="img/mess.png" alt="">
+         <img src="Img/mess.png" alt="">
          </a>
          </div><!-- Fin Iconos Florentes  -->
          <footer class="footer text-center"> <!-- Inicio Footer-->
