--- a/Index.html
+++ b/Index.html
@@ -49,25 +49,25 @@
          </div>
        <div class="col-md-10"> <!-- Inicio columna Central -->
          <br>
-         <p class="text-justify"> A continuacion mencionaremos algunas diferencias entre el lavado ecologico que ofrecemos y el levado convencional</p>
+         <p class="text-justify"> Tenemos una propuesta innovadora para reducir el consumo de agua en el lavado de autos. Nuestro  principal objetivo es disminuir el impacto ecológico que ocasiona el lavado convencional de toda clase de vehículos y contribuir de este modo a la protección y preservación de los recursos naturales.</p>
          <div class="row">
          <div class="col-md-6"> <!-- Inicio columna lavado ecologico -->
          <h3 align="center"> Lavado Ecologico </h3>
   <br>
-    <p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Mínimo uso de agua. </p>
-    <p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Servicio a domicilio para mayor comodidad. </p>
-    <p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Máquinas autónomas de agua y energía. </p>
-    <p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Sin charcos ni desperdicios. </p>
-    <p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Productos de excelente calidad. </p>
-    <p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Personal altamente capacitado. </p>
+    <p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Mínimo uso de agua. </p>
+    <p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Servicio a domicilio para mayor comodidad. </p>
+    <p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Máquinas autónomas de agua y energía. </p>
+    <p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Sin charcos ni desperdicios. </p>
+    <p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Productos de excelente calidad. </p>
+    <p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Personal altamente capacitado. </p>
   </div> <!-- Fin columna lavado ecologico -->
            <div class="col-md-6"> <!-- Inicio columna lavado convencional -->
         <h3 align="center"> Lavado Convencional</h3>
         <br>
-<p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Tiempos de espera prolongados. </p>
-<p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Desplazamientos. </p>
-<p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Largas filas. </p>
-<p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Gasto de agua descomunal (150 Litros  promedio día). </p>
+<p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Tiempos de espera prolongados. </p>
+<p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Desplazamientos. </p>
+<p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Largas filas. </p>
+<p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Gasto de agua descomunal (150 Litros  promedio día). </p>
 </div> <!-- Fin columna lavado convencional -->
          </div>
          <br>
