--- a/Index.html
+++ b/Index.html
@@ -49,7 +49,7 @@
          </div>
        <div class="col-md-10"> <!-- Inicio columna Central -->
          <br>
-         <p class="text-justify"> Tenemos una propuesta innovadora para reducir el consumo de agua en el lavado de autos. Nuestro  principal objetivo es disminuir el impacto ecológico que ocasiona el lavado convencional de toda clase de vehículos y contribuir de este modo a la protección y preservación de los recursos naturales.</p>
+         <p class="text-justify"> Tenemos una propuesta innovadora para reducir el consumo de agua en el lavado de autos. Nuestro  principal objetivo es disminuir el impacto ecológico que ocasiona el lavado convencional de vehículos y de esta forma contribuir de este modo a la protección y preservación de los recursos naturales.</p>
          <div class="row">
          <div class="col-md-6"> <!-- Inicio columna lavado ecologico -->
          <h3 align="center"> Lavado Ecologico </h3>
