--- a/Index.html
+++ b/Index.html
@@ -84,7 +84,7 @@
        </a>
        </div> <!-- Fin Iconos Flotante -->
        <div class="btn-wp">
-       <a href="https://api.whatsapp.com/send?phone=+57 3204661340" target="_blank">
+       <a href="https://api.whatsapp.com/send?phone=" target="_blank">
        <img src="Img/mess.png" alt="">
        </a>
        </div> <!-- Fin Iconos Florentes -->
