--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,7 @@
   <link href="css/styles.css" rel="stylesheet" />
 </head>
 <body>
-        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav"> <!-- Inicio barra de Navegacion-->s
+        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav"> <!-- Inicio barra de Navegacion-->
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="index.html"> Inicio </a><button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -85,7 +85,7 @@
 
        <div class="btn-whatsapp"> <!-- Inicio Iconos Flotante -->
        <a href="https://api.whatsapp.com/send?phone=+57 3204661340&text=Quiero mas información a cerca de sus servicios" target="_blank">
-       <img src="Img/Wp.png" alt=""> hola
+       <img src="Img/Wp.png" alt="">
        </a>
        </div>
 
