--- a/Index.html
+++ b/Index.html
@@ -73,7 +73,7 @@
 </div> <!-- Fin columna lavado convencional -->
          </div>
          <br>
-           <img class="info mb-5" src="Img/Info1.png" alt=""/>
+           <img class="info mb-5" src="Img/info1.png" alt=""/>
        </div> <!-- Fin columna central -->
        <div class="col-md-1">
        <!-- Columna vacia -->
